overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ html,
 body {
   height: auto;
   width: 100%;
-  overflow-x: hidden;
+  overflow: auto;
 }
 a {
   text-decoration: none;
