--- a/src/main/Main.css
+++ b/src/main/Main.css
@@ -1,6 +1,7 @@
 .main_container {
   width: 100%;
   background-color: #e7e4e4;
+  overflow: auto;
 }
 
 
